# backend/docs/swagger.json
@@ -4504,14 +4504,8 @@
                 "prename": {
                     "type": "integer"
                 },
-                "registrar": {
-                    "type": "integer"
-                },
                 "telephonenumber": {
                     "type": "string"
-                },
-                "user": {
-                    "type": "integer"
                 }
             }
         },
@@ -4794,22 +4788,12 @@
                     "type": "object",
                     "$ref": "#/definitions/ent.Prename"
                 },
-                "registrar": {
-                    "description": "Registrar holds the value of the registrar edge.",
-                    "type": "object",
-                    "$ref": "#/definitions/ent.Registrar"
-                },
                 "treatment": {
                     "description": "Treatment holds the value of the treatment edge.",
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/ent.Treatment"
                     }
-                },
-                "user": {
-                    "description": "User holds the value of the user edge.",
-                    "type": "object",
-                    "$ref": "#/definitions/ent.User"
                 }
             }
         },
@@ -5410,13 +5394,6 @@
         "ent.RegistrarEdges": {
             "type": "object",
             "properties": {
-                "registrar2doctorinfo": {
-                    "description": "Registrar2doctorinfo holds the value of the registrar2doctorinfo edge.",
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/ent.Doctorinfo"
-                    }
-                },
                 "user": {
                     "description": "User holds the value of the user edge.",
                     "type": "object",
@@ -5603,11 +5580,6 @@
                     "description": "Medicalrecordstaff holds the value of the medicalrecordstaff edge.",
                     "type": "object",
                     "$ref": "#/definitions/ent.Medicalrecordstaff"
-                },
-                "user2doctorinfo": {
-                    "description": "User2doctorinfo holds the value of the user2doctorinfo edge.",
-                    "type": "object",
-                    "$ref": "#/definitions/ent.Doctorinfo"
                 },
                 "user2registrar": {
                     "description": "User2registrar holds the value of the user2registrar edge.",
